--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 * { box-sizing: border-box; }
 
+b[data-toggle="tooltip"] { cursor: pointer; }
+
 body { margin: 0; padding: 0; }
 
 header { width: 100%; margin: 0; padding: 0; background-color: #2d4054; }
@@ -12,6 +14,10 @@ header nav ul { float: right; margin: 0; }
 header nav ul li { list-style: none; display: inline-block; margin: 0 30px; }
 header nav ul li a { color: #fff; text-decoration: none; font-size: 20px; }
 
+footer { background-color: #2d4054; }
+footer section { width: 90%; margin: 0 auto; text-align: center; padding: 10px 0; color: #fff; }
+footer section a { color: #fff; }
+
 main { width: 90%; margin: 0 auto; padding: 0; max-width: 1440px; margin-top: 40px; }
 main h1 { text-align: center; font-size: 36px; line-height: 1.6; margin-bottom: 30px; }
 main p { font-size: 18px; line-height: 1.65; }
@@ -19,4 +25,18 @@ main h3 { font-size: 24px; }
 main section { margin-bottom: 30px; }
 main section h2 { margin: 10px 0 20px; }
 
-/*# sourceMappingURL=style.css.map */
+.project-proposal article { margin: 50px 0; }
+.project-proposal article div h5 { margin-bottom: 20px; }
+.project-proposal article div p { margin-bottom: 0; }
+
+@media screen and (max-width: 568px) { header #logo { width: 72px; }
+  header nav ul { padding: 0; display: flex; width: 72%; justify-content: space-between; }
+  header nav ul li { margin: 0; } }
+@media print and (min-width: 440px) { header { background-color: #fff; }
+  header nav #logo { width: 72px; margin: 0 auto; z-index: 2; }
+  header nav #logo img { height: 100px; }
+  header nav ul { display: none; }
+  header nav::before { content: " "; position: absolute; border: 1px solid; width: 90%; }
+  main { margin-top: 70px; }
+  main label { display: none; }
+  main input { border: none; padding: 0; } }
