--- a/css/style.scss
+++ b/css/style.scss
@@ -2,78 +2,90 @@
 	font-size: 16px;
 };
 *{box-sizing: border-box;}
-
-body{
-	margin: 0;
-	padding: 0;
+b[data-toggle="tooltip"]{
+	cursor: pointer;
 }
+body{ margin: 0; padding: 0; }
 
-header{
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	background-color: #2d4054;
+header{ width: 100%; margin: 0; padding: 0; background-color: #2d4054;
 
-	nav{
-		width: 90%;
-		max-width: 1440px;
-		padding: 10px 0;
-		margin: 0 auto;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
+	nav{ width: 90%; max-width: 1440px; padding: 10px 0; margin: 0 auto; display: flex; justify-content: space-between; align-items: center;
 
-		#logo{
-			float: left;
-			width: 100px;
-			img{
-				height: 58px;
-			}
+		#logo{ float: left; width: 100px;
+			img{ height: 58px; }
 		}
 
-		ul{
-			float: right;
-			margin: 0;
+		ul{ float: right; margin: 0;
 
-			li{
-				list-style: none;
-				display: inline-block;
-				margin: 0 30px;
-				a{
-					color: #fff;
-					text-decoration: none;
-					font-size: 20px;
-				}
+			li{ list-style: none; display: inline-block; margin: 0 30px;
+				a{ color: #fff; text-decoration: none; font-size: 20px;}
 				a:hover{}
 			}
 		}
 	}
 }
-main{
-	width: 90%;
-	margin: 0 auto;
-	padding: 0;
-	max-width: 1440px;
-	margin-top: 40px;
-	h1{
-		text-align: center;
-		font-size: 36px;
-		line-height: 1.6;
-		margin-bottom: 30px;
-	}
-	p{
-		font-size: 18px;
-		line-height: 1.65;
-	}
-	h3{
-		font-size: 24px;
-	}
 
-	section{
-		margin-bottom: 30px;
+footer{
+	background-color: #2d4054;
 
-		h2{
-			margin: 10px 0 20px;
+	section{ width: 90%; margin: 0 auto; text-align: center;padding: 10px 0; color: #fff;
+		
+		a{ color: #fff; }
+
+	}
+}
+main{  width: 90%; margin: 0 auto; padding: 0; max-width: 1440px; margin-top: 40px;
+	h1{ text-align: center;  font-size: 36px; line-height: 1.6;  margin-bottom: 30px;}
+	p{ font-size: 18px;line-height: 1.65; }
+	h3{  font-size: 24px;}
+
+	section{ margin-bottom: 30px;
+
+		h2{ margin: 10px 0 20px;}
+	}
+}
+
+.project-proposal{
+	article{
+		margin: 50px 0;
+
+		div{
+			h5{ margin-bottom: 20px; }
+			p{ margin-bottom: 0;}
 		}
 	}
+}
+
+
+@media screen and (max-width: 568px){
+
+	header{
+		#logo{ width: 72px; }	
+		nav{
+			ul{ padding: 0; display: flex; width: 72%; justify-content: space-between;
+				li{ margin: 0; }
+			}
+	    }
+	}
+	
+}
+
+@media print and (min-width: 440px){
+	
+	header{ background-color: #fff;
+		nav{
+			#logo{ width: 72px; margin: 0 auto; z-index: 2;
+				img{ height: 100px; }
+			}	
+			ul{ display: none;}
+			&::before{ content: " "; position: absolute; border: 1px solid;width: 90%;};
+		}
+	}
+
+	main{
+		margin-top: 70px;
+		label{display: none;}
+		input{border: none; padding: 0;}
+	}
+	
 }
